--- a/html/about.html
+++ b/html/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My HTML Page</title>
+    <title> Wow Foodie Restaurant </title>
     <link rel="stylesheet" href="../style.css" />
   </head>
   <body>
