--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title> Wow Foodie Restaurant </title>
+    <meta name="viewport" content="width=800" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
