--- a/html/about.html
+++ b/html/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title> Wow Foodie Restaurant </title>
+    <title> Wow Foodie Restaurant</title>
     <link rel="stylesheet" href="../style.css" />
   </head>
   <body>
@@ -11,8 +11,8 @@
           <a class="menu" href="../index.html"> Home </a>
           <a class="menu" href="#about"> About Us </a>
           <a class="menu" href="menu.html"> Menu </a>
-          <a class="menu" href="../index.html#gallery"> Gallery </a>
-          <a class="menu" href="../index.html#hall"> Banquet Hall</a>
+          <a class="menu" href="gallery.html"> Gallery </a>
+          <a class="menu" href="hall.html"> Banquet Hall</a>
           <a class="menu" href="contact.html"> Contact Us </a>
         </nav>  
         <img src="../images/logo.png" width=100/>
