--- a/html/contact.html
+++ b/html/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title> Wow Foodie Restaurant </title>
+    <title> Wow Foodie Restaurant</title>
     <link rel="stylesheet" href="../style.css" />
     <style>
       form {
@@ -22,8 +22,8 @@
           <a class="menu" href="../index.html"> Home </a>
           <a class="menu" href="about.html"> About Us </a>
           <a class="menu" href="menu.html"> Menu </a>
-          <a class="menu" href="../index.html#gallery"> Gallery </a>
-          <a class="menu" href="../index.html#hall"> Banquet Hall</a>
+          <a class="menu" href="gallery.html"> Gallery </a>
+          <a class="menu" href="hall.html"> Banquet Hall</a>
           <a class="menu" href="#contact"> Contact Us </a>
         </nav>  
         <img src="../images/logo.png" width=100/>
