--- a/html/menu.html
+++ b/html/menu.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>  Wow Foodie Restaurant </title>
+    <title> Wow Foodie Restaurant </title>
     <link rel="stylesheet" href="../style.css" />
   </head>
   <body>
@@ -11,9 +11,9 @@
           <a class="menu" href="../index.html"> Home </a>
           <a class="menu" href="about.html"> About Us </a>
           <a class="menu" href="#food"> Menu </a>
-          <a class="menu" href="../index.html#gallery"> Gallery </a>
-          <a class="menu" href="../index.html#hall"> Banquet Hall</a>
-          <a class="menu" href="./html/contact.html"> Contact Us </a>
+          <a class="menu" href="gallery.html"> Gallery </a>
+          <a class="menu" href="hall.html"> Banquet Hall</a>
+          <a class="menu" href="contact.html"> Contact Us </a>
         </nav>  
         <img src="../images/logo.png" width=100/>
     </div>
