--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
           <a class="menu" href="#title"> Home </a>
           <a class="menu" href="./html/about.html"> About Us </a>
           <a class="menu" href="./html/menu.html"> Menu </a>
-          <a class="menu" href="#gallery"> Gallery </a>
-          <a class="menu" href="#hall"> Banquet Hall</a>
+          <a class="menu" href="./html/gallery.html"> Gallery </a>
+          <a class="menu" href="./html/hall.html"> Banquet Hall</a>
           <a class="menu" href="./html/contact.html"> Contact Us </a>
         </nav>  
         <img src="images/logo.png" width=100/>
@@ -76,8 +76,8 @@
         </section>
         <hr/>
         <section>
-          <h3 style="text-align: center" id="hall"> •⁃⁃⁃⁃  BANQUET HALL ⁃⁃⁃⁃• </h3>
-          <img src="images/hall.jpg" width=100%/>
+          <h3 style="text-align: center"> •⁃⁃⁃⁃  Why Dine With Us? ⁃⁃⁃⁃• </h3>
+          <img src="images/dine.jpg" width=100%/>
         </section>
     </main>
     <footer style="font-size: 20px;">
