--- a/html/about.html
+++ b/html/about.html
@@ -17,12 +17,12 @@
         </nav>  
         <img src="../images/logo.png" width=100/>
     </div>
-        <div id="title" style="color: white;"> <span style="font-family: 'Brush Script MT'; color:darkcyan"> Come, Relish The Flavours Of</span> <br/> Wow Foodie Restaurant </div>
+        <div id="about" style="color: white;"> <span style="font-family: 'Brush Script MT'; color:darkcyan"> Come, Relish The Flavours Of</span> <br/> Wow Foodie Restaurant </div>
     </header>
     
     <main>
         <section>
-          <h3 style="text-align: center" id="about"> •⁃⁃⁃⁃⁃  DELICACIES SERVED OVER GENERATIONS WITH UTMOST CARE AND LOVE! ⁃⁃⁃⁃⁃• </h3>
+          <h3 style="text-align: center"> •⁃⁃⁃⁃⁃  DELICACIES SERVED OVER GENERATIONS WITH UTMOST CARE AND LOVE! ⁃⁃⁃⁃⁃• </h3>
           <h1  style="text-align: center; font-size: xx-large;"> Tale Of Tastes </h1>
           <div style="margin-bottom: 50px;"> Wow Foodie Restaurant unlocks the tales of traditions, tastes, and flavors that lingered in the taste buds and was passed down from generations to generations. 
             Established way back in the 1960s, the restaurant has come a long way delighting food lovers all over Chennai with tastes that surpassed the test of time. 
