--- a/html/contact.html
+++ b/html/contact.html
@@ -28,12 +28,12 @@
         </nav>  
         <img src="../images/logo.png" width=100/>
     </div>
-        <div id="title"> <span style="font-family: 'Brush Script MT'; color:darkcyan"> Contact Us </span> <br/> Wow Foodie Restaurant </div>
+        <div id="contact"> <span style="font-family: 'Brush Script MT'; color:darkcyan"> Contact Us </span> <br/> Wow Foodie Restaurant </div>
     </header>
     
     <main>
         <section>
-          <h3 id="contact"> •⁃⁃⁃⁃⁃  Stay in Touch ⁃⁃⁃⁃⁃• </h3>
+          <h3> •⁃⁃⁃⁃⁃  Stay in Touch ⁃⁃⁃⁃⁃• </h3>
           <h1  style="font-size: xx-large;"> Contact Number : +91 9987654321 
           <br/> eMail : contact@wowfoodie.com </h1>  
           <h3> •⁃⁃⁃⁃⁃  Open Timings ⁃⁃⁃⁃⁃• </h3>
