--- a/html/gallery.html
+++ b/html/gallery.html
@@ -17,12 +17,12 @@
         </nav>  
         <img src="../images/logo.png" width=100/>
     </div>
-        <div id="title" style="color: white;"> <span style="font-family: 'Brush Script MT'; color:darkcyan"> Gallery </span> <br/> Wow Foodie Restaurant </div>
+        <div id="gallery" style="color: white;"> <span style="font-family: 'Brush Script MT'; color:darkcyan"> Gallery </span> <br/> Wow Foodie Restaurant </div>
     </header>
     
     <main>
         <section>
-          <h3 style="text-align: center" id="gallery"> •⁃⁃⁃⁃  GALLERY ⁃⁃⁃⁃• </h3>
+          <h3 style="text-align: center"> •⁃⁃⁃⁃  GALLERY ⁃⁃⁃⁃• </h3>
           <ul type="none">
             <li>
               <div class="container">
