--- a/html/hall.html
+++ b/html/hall.html
@@ -17,12 +17,12 @@
         </nav>  
         <img src="../images/logo.png" width=100/>
     </div>
-        <div id="title"> <span style="font-family: 'Brush Script MT'; color:darkcyan"> Banquet Hall </span> <br/> Wow Foodie Restaurant </div>
+        <div id="hall"> <span style="font-family: 'Brush Script MT'; color:darkcyan"> Banquet Hall </span> <br/> Wow Foodie Restaurant </div>
     </header>
     
     <main>
         <section>
-          <h3 style="text-align: center" id="hall"> •⁃⁃⁃⁃⁃ BANQUET HALLS ⁃⁃⁃⁃⁃• </h3>
+          <h3 style="text-align: center"> •⁃⁃⁃⁃⁃ BANQUET HALLS ⁃⁃⁃⁃⁃• </h3>
           <div style="margin-bottom: 50px;"> A long corridor embellished with beautiful glass art leads you to our 2 exclusive buffet halls - ‘Swayamvara’ & ‘Swadishta’, each with a seating capacity of 200 and 125 respectively. Aptly christened based on the fascinating Sanskrit words, ‘Swayamvara’ refers to the vast variety of cuisine offered, from which you can choose (as in, a ‘Swayamvar’ of food), while ‘Swadishta’ denotes the lip smacking, delectable spread, ready to titillate your palate. Magnificently intricate & antique paintings adorn the walls of both the halls, flaunting the long-forgotten Indian craftsmanship and reminding us of our rich cultural heritage.
             <br/>
             <br/>
