--- a/html/menu.html
+++ b/html/menu.html
@@ -17,12 +17,12 @@
         </nav>  
         <img src="../images/logo.png" width=100/>
     </div>
-        <div id="title" style="color: white;"> <span style="color:darkcyan"> MENU </span> <br/>Wow Foodie Restaurant </div>
+        <div id="food" style="color: white;"> <span style="color:darkcyan"> MENU </span> <br/>Wow Foodie Restaurant </div>
     </header>
     
     <main>
         <section>
-          <h3 style="text-align: center" id="food"> •⁃⁃⁃⁃  MENU ⁃⁃⁃⁃• </h3>
+          <h3 style="text-align: center"> •⁃⁃⁃⁃  MENU ⁃⁃⁃⁃• </h3>
           <div>
             <table style="margin: 0 auto;">
               <tr> 
