--- a/html/contact.html
+++ b/html/contact.html
@@ -4,6 +4,11 @@
     <title> Wow Foodie Restaurant</title>
     <link rel="stylesheet" href="../style.css" />
     <style>
+      header {
+        background-image: url('../images/contact.png'), linear-gradient(to right, aquamarine, deepskyblue); 
+        background-size: contain, cover; 
+        background-repeat: no-repeat, repeat;
+      }
       form {
         display: flex;
         justify-content: center;
@@ -16,7 +21,7 @@
     </style>
   </head>
   <body>
-    <header style="background-image: url('../images/contact.png'); background-size: contain;">
+    <header>
       <div id="heading">
         <nav id="navigate">
           <a class="menu" href="../index.html"> Home </a>
