--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
   <head>
     <title> Wow Foodie Restaurant </title>
     <link rel="stylesheet" href="style.css" />
+    <style>
+      h3 {
+        text-align: center;
+      }
+      #gif {
+        text-align: center;
+      }
+    </style>
   </head>
   <body>
     <header>
@@ -22,7 +30,7 @@
     
     <main>
         <section>
-          <h3 style="text-align: center"> •⁃⁃⁃⁃  DISCOVER ⁃⁃⁃⁃• </h3>
+          <h3> •⁃⁃⁃⁃  DISCOVER ⁃⁃⁃⁃• </h3>
           <div>
             <img src="images/food1.jpg" style="float: right;margin-top:-2%;" width="30%"; />
             <h1  style="text-align: center; font-size: xx-large;"> Tale Of Our Tastes </h1>
@@ -36,7 +44,10 @@
         </section>
         <hr/>
         <section>
-          <h3 style="text-align: center" id="gallery"> •⁃⁃⁃⁃  CUISINES ⁃⁃⁃⁃• </h3>
+          <h3> •⁃⁃⁃⁃  CUISINES ⁃⁃⁃⁃• </h3>
+          <div id="gif">
+            <img src="images/food.gif" width="45%"  />
+          </div>
           <ul type="none">
             <li>
               <div class="container">
@@ -76,7 +87,7 @@
         </section>
         <hr/>
         <section>
-          <h3 style="text-align: center"> •⁃⁃⁃⁃  Why Dine With Us? ⁃⁃⁃⁃• </h3>
+          <h3> •⁃⁃⁃⁃  Why Dine With Us? ⁃⁃⁃⁃• </h3>
           <img src="images/dine.jpg" width=100%/>
         </section>
     </main>
